Complete frame-event module implementation with tests
Co-authored-by: liuxiao2015 <12387214+liuxiao2015@users.noreply.github.com>